--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>coursera</title>
-  </head>
-  <body>
-    <h1>Hellow  coursera it's a great course!?!</h1>
+</head>
 
-  </body>
+<body>
+    <h1>Hellow coursera . hi i am zayed</h1>
+
+</body>
+
 </html>
