--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <h1>Hellow coursera.Hi i am zayed</h1>
+    <h1>Hellow coursera.Hi i am zayed. how are you.</h1>
+    <h1>Hellow coursera.</h1>
 
 </body>
 
